# voxbox

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  package-lock.json
.codex/agents/: greybound-chain-architect.toml  greybound-log-analyst.toml  greybound-test-runner.toml
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: amp.rs  circuit.rs  ir.rs  lib.rs  pedal.rs
core/src/amp/: components.rs
core/src/amp/models/: nox.rs  nox30.rs
core/src/circuit/: passive.rs  power.rs  triode.rs
crates/voxbox-cli/: Cargo.toml
crates/voxbox-cli/src/: main.rs
crates/voxbox-core/: Cargo.toml
crates/voxbox-core/src/: ir.rs  lib.rs
crates/voxbox-plugin/: Cargo.toml
crates/voxbox-plugin/src/: lib.rs
crates/voxbox-standalone/: Cargo.toml
crates/voxbox-standalone/src/: main.rs
crates/voxbox-ui/: Cargo.toml
crates/voxbox-ui/src/: lib.rs
doc/research/: BIBLIO.md
docs/: package-lock.json
knowledge/: getting-started.mdx
knowledge/architecture/: rig-files.mdx
knowledge/models/pedals/reverb/: springfield.mdx  studioverb.mdx
knowledge/monitoring/: index.mdx
knowledge/research/: index.mdx  lab.mdx  meta.json  offline-rd-plan.mdx
lab/: .gitignore  README.md
lab/experiments/: 001-chain-reference-analysis.md  004-nam-reference-comparison.md
lab/references/nam/: README.md
lab/references/nam/manifests/: ac30hwh-6580.json
lab/references/spring-irs/smac2023/: manifest.json
lab/schemas/: nam-pack-manifest.schema.json  nam-reference.schema.json  segments.schema.json
lab/segments/: guitar-chords.markers.json
lab/src/greybound_lab/: cli.py  external_inputs.py  metrics.py  nam.py  nam_render.py  neural_cell.py  render.py  report.py  reverb.py  rig_sweep.py  segments.py  spice.py  stimuli.py
lab/tests/: test_external_inputs.py  test_metrics.py  test_nam.py  test_nam_render.py  test_render.py  test_reverb.py  test_rig_sweep.py  test_segments.py  test_stimuli.py
rigs/: all-nox.json5  grey-nox.json5  nox30-dimed.json5
schematic/: README.md  circuit-map.toml  dumble-overdrive-special.md  dumble-overdrive-special.toml
src/: amp.rs  ir.rs  lib.rs  main.rs
tests/: ac30_reference.rs
tests/fixtures/ac30/: README.md
tests/fixtures/circuit/: README.md  common_cathode_12ax7.cir
ui/src/: lib.rs
wasm/src/: lib.rs
web/: .gitignore  package.json
web/app/: global.css
web/components/: GreyboundConsole.tsx
web/lib/: rigs.ts  wasmEngine.ts  wasmMonitor.ts
